final versions of notebooks (?)

--- a/nbody-comparison.ipynb
+++ b/nbody-comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1b811f9d-3018-475a-959c-98e4d7cde149",
    "metadata": {},
    "outputs": [],
@@ -13,8 +13,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "15697d67-3b20-44c0-b119-bb3eb94fe868",
+   "metadata": {},
+   "source": [
+    "# Comparison with $N$-body simulations"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a8c45a3a-1cc6-4634-938f-e76c861cfe2e",
    "metadata": {},
    "outputs": [],
@@ -24,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "246830a1-2a71-4a7e-a4b3-de2ab0e24061",
    "metadata": {},
    "outputs": [],
@@ -36,6 +44,14 @@
     "    simpair.get_ll_solutions()\n",
     "    simpair.plot_nbody_and_secular(save=save)\n",
     "    return"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23547fb4-7e2f-467c-ba94-d720d9c72806",
+   "metadata": {},
+   "source": [
+    "The following are some comparisons between predictions from second-order secular theory and direct $N$-body integration of the system from various points in the parameter space in Fig. 5."
    ]
   },
   {
@@ -145,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "ddf3889a-1eec-4aec-90bd-a7561e3fc148",
    "metadata": {},
    "outputs": [
@@ -167,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21e53e20-70e7-4eaf-847c-3e3498d53e4f",
+   "id": "4eab9792-94c3-4149-9d77-a3151f791014",
    "metadata": {},
    "outputs": [],
    "source": []
